# pyfix-agent

./: .dockerignore  .gitignore  README.md  pyproject.toml  sumary.md
.github/: dependabot.yml
.github/workflows/: test.yml
benchmarks/: cases.yaml
configs/: default.yaml
containers/: Dockerfile  README.md  requirements.in  vulnerability-allowlist.json
docs/: benchmark.md  design.md  limitations.md  resume.md  roadmap.md  trace.md  v0.2.1-plan.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.7.0.md  v0.7.1.md
docs/results/: v0.3.1-qwen3.6-flash.md  v0.4.0-qwen3.6-flash-repeat4.md  v0.5.1-qwen3.6-max-preview-repeat4.md  v0.6.0-qwen3.6-max-preview.md  v0.6.1-qwen3.6-max-preview.md  v0.6.2-qwen3.6-max-preview.md
patch_eval/: __init__.py  git_apply.py  normalizer.py  parser.py  prompts.py  runner.py  types.py  validator.py
pyfixagent/: __init__.py  apply.py  benchmark.py  container_security.py  main.py  schemas.py  trace.py  trace_redaction.py  trace_viewer.py  workspace.py
pyfixagent/agent/: default_agent.py  prompts.py  state.py
pyfixagent/benchmarking/: __init__.py  cli.py  contracts.py  manifest.py  metrics.py  paths.py  reporting.py  runner.py  workspace.py
pyfixagent/context/: __init__.py  builder.py  policy.py  provider.py  pytest_summary.py  repository.py  selector.py  snippet.py  traceback_parser.py
pyfixagent/core/: __init__.py  contracts.py  engine.py
scripts/: reset_demo.py  summarize_trace.py
tests/: test_architecture.py  test_benchmark.py  test_bounded_process.py  test_cli.py  test_config.py  test_container_sandbox.py  test_container_security.py  test_context_builder.py  test_context_selector.py  test_context_snippet.py  test_default_agent.py  test_edit_policy.py  test_file_tools.py  test_git_apply.py  test_main_trace.py  test_normalizer.py  test_parser.py  test_patch_approval.py  test_patch_tools.py  test_prompts.py  test_pytest_summary.py  test_replacement_tools.py  test_repository_context.py  test_reset_demo.py  test_runner_iris.py  test_sandbox.py  test_semantic_review.py  test_summarize_trace.py  test_test_policy.py  test_trace_enhancement.py  test_trace_redaction.py  test_trace_viewer.py  test_traceback_parser.py  test_validator.py  test_workspace.py  test_workspace_transaction.py
(+165 files in other folders)
