[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfixagent"
version = "0.2.0"
description = "A small pytest-driven Python code repair agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm",
    "pyyaml",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["pyfixagent*", "patch_eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--basetemp=.pytest_tmp", "-p", "no:cacheprovider"]
markers = [
    "integration: tests that call real external services such as LLM APIs",
]
