[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfixagent"
version = "0.7.0"
description = "A small pytest-driven Python code repair agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm",
    "pyyaml",
    "pytest",
]

[project.optional-dependencies]
benchmark = [
    "matplotlib",
    "numpy",
    "scikit-learn",
]

[project.scripts]
pyfixagent = "pyfixagent.main:cli"
pyfixagent-benchmark = "pyfixagent.benchmark:cli"
pyfixagent-apply = "pyfixagent.apply:cli"
pyfixagent-trace-viewer = "pyfixagent.trace_viewer:cli"

[tool.setuptools.packages.find]
include = ["pyfixagent*", "patch_eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--basetemp=.pytest_tmp", "-p", "no:cacheprovider"]
markers = [
    "integration: tests that call real external services such as LLM APIs",
]
